deployment/cert-manager.yaml
# Cert-Manager для автоматических TLS сертификатов
# CERES v3.1 - Задача 2.1
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
# Установка через Helm (выполняется через deployer.go)
# helm repo add jetstack https://charts.jetstack.io
# helm install cert-manager jetstack/cert-manager --namespace cert-manager --version v1.13.0 --set installCRDs=true
