deployment/velero.yaml
# Velero для backup и restore
# CERES v3.1 - Задача 3.1
apiVersion: v1
kind: Namespace
metadata:
  name: velero
---
# Установка через Helm (выполняется через deployer.go)
# helm repo add vmware-tanzu https://vmware-tanzu.github.io/helm-charts
# helm install velero vmware-tanzu/velero --namespace velero --set configuration.provider=aws --set configuration.backupStorageLocation.bucket=ceres-backups --set configuration.volumeSnapshotLocation.config.region=minio --set snapshotsEnabled=false --set initContainers[0].name=velero-plugin-for-aws --set initContainers[0].image=velero/velero-plugin-for-aws:v1.8.0 --set initContainers[0].volumeMounts[0].mountPath=/target --set initContainers[0].volumeMounts[0].name=plugins
