deployment/keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceres
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ceres
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ceres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:23.0.0
        args:
        - start-dev
        securityContext:
          privileged: true
          runAsUser: 0
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
