deployment/nodeport-services.yaml
# Direct NodePort access to services (без Ingress)
---
# Grafana NodePort
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30300
  selector:
    app: grafana
---
# Prometheus NodePort
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30900
  selector:
    app: prometheus
---
# Jaeger NodePort
apiVersion: v1
kind: Service
metadata:
  name: jaeger-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 16686
    targetPort: 16686
    nodePort: 30686
  selector:
    app: jaeger
---
# GitLab NodePort
apiVersion: v1
kind: Service
metadata:
  name: gitlab-nodeport
  namespace: gitlab
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30700
  selector:
    app: gitlab
---
# Mattermost NodePort
apiVersion: v1
kind: Service
metadata:
  name: mattermost-nodeport
  namespace: mattermost
spec:
  type: NodePort
  ports:
  - port: 8065
    targetPort: 8065
    nodePort: 30806
  selector:
    app: mattermost
---
# MinIO Console NodePort
apiVersion: v1
kind: Service
metadata:
  name: minio-nodeport
  namespace: minio
spec:
  type: NodePort
  ports:
  - name: console
    port: 9001
    targetPort: 9001
    nodePort: 30901
  selector:
    app: minio
---
# Redmine NodePort
apiVersion: v1
kind: Service
metadata:
  name: redmine-nodeport
  namespace: redmine
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30301
  selector:
    app: redmine
---
# Vault NodePort
apiVersion: v1
kind: Service
metadata:
  name: vault-nodeport
  namespace: vault
spec:
  type: NodePort
  ports:
  - port: 8200
    targetPort: 8200
    nodePort: 30820
  selector:
    app: vault
---
# Jenkins NodePort
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30808
  selector:
    app: jenkins
---
# SonarQube NodePort
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-nodeport
  namespace: sonarqube
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30904
  selector:
    app: sonarqube
---
# Portainer NodePort
apiVersion: v1
kind: Service
metadata:
  name: portainer-nodeport
  namespace: portainer
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30902
  selector:
    app: portainer
---
# Uptime Kuma NodePort
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-nodeport
  namespace: uptime-kuma
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30310
  selector:
    app: uptime-kuma
---
# Adminer NodePort
apiVersion: v1
kind: Service
metadata:
  name: adminer-nodeport
  namespace: adminer
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30880
  selector:
    app: adminer
---
# RabbitMQ Management NodePort
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
  namespace: rabbitmq
spec:
  type: NodePort
  ports:
  - name: management
    port: 15672
    targetPort: 15672
    nodePort: 30672
  selector:
    app: rabbitmq
---
# Elasticsearch NodePort
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-nodeport
  namespace: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 9200
    targetPort: 9200
    nodePort: 30920
  selector:
    app: elasticsearch
---
# Kibana NodePort
apiVersion: v1
kind: Service
metadata:
  name: kibana-nodeport
  namespace: kibana
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30561
  selector:
    app: kibana
---
# Harbor NodePort
apiVersion: v1
kind: Service
metadata:
  name: harbor-nodeport
  namespace: harbor
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30800
  selector:
    app: harbor-core

---
# Nextcloud NodePort
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nodeport
  namespace: nextcloud
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30802
  selector:
    app: nextcloud
